# pku-captain

./: .gitignore  ARCHITECTURE.html  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTORS.md  DEVCHANGELOG.md  LICENSE  README.md  VERIFICATION.md  conftest.py  install.sh  pyproject.toml  secrets
.github/: CODEOWNERS
.github/workflows/: ci.yml
TASTES/: README.md  code-structure.md  correctness.md  naming-and-style.md  process.md
doc_base/: manifest.json
docs/: 23-作业报告.tex  design_reference_zh.md  gui_demo_zh.md  gui_manual_test_zh.md  integration_contract_zh.md  roadmap_zh.md  schedule_zh.md  setup_zh.md  treehole-protocol.md
docs/tasks/: 000_delegation_guide.md  001_source_subclasses.md  002_rag_stack.md  003_memory.md  004_reminder_tool.md  005_lecture_tool.md  006_pku3b_announcements_tool.md  007_morning_briefing_workflow.md  008_kimi_provider.md
macos/: install-agent.sh
scripts/: package_release.sh  probe_data.py  smoke_deepseek.py  smoke_workflow.py  split_doc_base.py
src/: __main__.py  cli.py
src/core/: __init__.py  agent.py  announcement_history.py  auto_refresh.py  bootstrap.py  conversation.py  credentials.py  dashboard_cache.py  memory.py  memory_learn.py  network.py  session_store.py  session_titler.py  vision_router.py
src/dean/: __init__.py  __main__.py  auth.py  cli.py  models.py  pagination.py  parsers.py  resources.py
src/llm/: __init__.py  base.py  deepseek.py  echo.py  kimi.py
src/pku_captain/: __init__.py  __main__.py
src/pypku3b/: blackboard.py  client.py  errors.py  models.py  portal.py
src/rag/: __init__.py  calendar.py  dean.py  embedder.py  knowledge_base.py  static.py
src/tools/: __init__.py  base.py  calendar_reminder.py  clock.py  dean_resources.py  dean_updates.py  doc_base.py  knowledge_search.py  lecture.py  memory.py  pku3b.py  pku3b_announcements.py  pku3b_assignments.py  pku3b_coursetable.py  pku3b_links.py  plib_materials.py  redact.py  reminder.py  treehole_updates.py  weather.py
tests/: conftest.py  test_agent_cancel.py  test_agent_guards.py  test_agent_settings_live_apply.py  test_agent_vision_inject.py  test_announcement_history.py  test_api_embedder.py  test_auto_refresh.py  test_bootstrap_docbase.py  test_bootstrap_rag.py  test_calendar_reminder_tool.py  test_chat_panel_copy.py  test_chat_panel_history.py  test_chat_panel_links.py  test_chat_panel_model_switch.py  test_chat_panel_segments.py  test_chat_panel_stop.py  test_chat_panel_thinking.py  test_cli.py  test_context_meter.py  test_context_usage.py  test_credentials.py  test_dashboard_cache.py  test_dashboard_dialogs.py  test_dashboard_gating.py  test_dashboard_worker_refresh.py  test_dean_inbox.py  test_dean_sync.py  test_dean_tool.py  test_dean_updates_tool.py  test_doc_base.py  test_ids.py  test_kimi_provider.py  test_login_dialog.py  test_memory_agent.py  test_memory_learn.py  test_memory_store.py  test_memory_tool.py  test_model_context_window.py  test_model_live_apply.py  (+20 more)
(+55 files in other folders)
