[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pku-dean-cli"
version = "0.1.0"
description = "CLI for fetching public resources from dean.pku.edu.cn (PKU Office of Educational Administration)."
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
dependencies = [
    "requests>=2.31",
    "beautifulsoup4>=4.12",
    "lxml>=4.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
]

[project.scripts]
dean = "dean.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/dean"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N"]
