[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pku-captain"
version = "0.0.1"
description = "Desktop AI assistant for PKU students."
requires-python = ">=3.11"
dependencies = [
    "PyQt6>=6.6",
    "requests>=2.31",
    "numpy>=1.26",
    # Vendored under vendor/ (git subtree). plib/dean scrape HTML with these;
    # treehole needs only requests. See vendor/*/pyproject.toml for provenance.
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
]

[project.optional-dependencies]
# Optional: renders LaTeX in chat bubbles via QWebEngine + MathJax. The chat
# panel degrades to plain rich-text when PyQt6-WebEngine is not installed, so
# this stays out of the hard dependency set.
math = [
    "PyQt6-WebEngine>=6.6",
]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
    "mypy>=1.10",
]

[project.scripts]
pku-captain = "src.__main__:main"
# Vendored treehole CLI entry point. The macOS notifier LaunchAgent shells out
# to a `treehole` binary; exposing it from our own venv keeps that self-contained.
treehole = "treehole.cli:main"

[tool.hatch.build.targets.wheel]
# `src` is our own package; the vendor/* entries expose the git-subtree'd
# libraries (plib_cli, dean, treehole) as top-level imports, so no sys.path
# shims or sibling-venv subprocesses are needed.
packages = [
    "src",
    "vendor/plib-cli/src/plib_cli",
    "vendor/pku-dean-cli/src/dean",
    "vendor/pku-treehole-cli/src/treehole",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N"]
